# slivertesttool

./: .gitignore  .replit  README.md  pyproject.toml  replit.md  run.py  run_collab.py  run_web.py  run_worker.py  skills-lock.json
app/: __init__.py
app/collab/: __init__.py  materializer.py  server.py
app/jobqueue/: huey_app.py  tasks.py
app/models/: __init__.py  lanmatrix.py  task.py  task_event.py
app/routes/: lanmatrix_pages.py  page_routes.py
app/routes/lanmatrix/: _base.py  (+4 more)
app/runners/: __init__.py  judge_bundler.py  silver_cleanup.py  silver_pool.py  silver_runner.py
app/services/: event_service.py  license_service.py  project_model_service.py  report_service.py  task_service.py  upload_service.py
docs/: DELETION_MANIFEST.txt  IO_REFERENCE.md  LAN_TEST_MATRIX.md  TEST_MATRIX.md
frontend/: build_offline.sh  package-lock.json  package.json  vite.collab.config.ts
frontend/src/: adapter.ts  cell_tooltip.ts  collab.ts  main.ts  steps_adapter.ts
samples/: model.sil
samples/TC_SMOKE/: judge.py
scripts/: init_db.py  install_collab_deps.py  lm_backup.py  lm_restore.py  reset_db.py
silvetestapp/: .env.example  requirements.txt  run_collab.py  run_worker.py
silvetestapp/app/: __init__.py  config.py  extensions.py
silvetestapp/docs/: STRUCTURAL_UNIFICATION.md  TECH_DEBT_REPORT.md  yjs-collab-checklist.md
silvetestapp/frontend/: package-lock.json
silvetestapp/tests/: conftest.py  test_lanmatrix_validation.py  test_silver_pool.py
sql/: add_io_sheet.sql  rls_disable.sql  rls_supabase.sql  schema.sql
tests/: lm_helpers.py  test_api.py  test_bundler.py  test_collab_awareness.py  test_collab_presence.py  test_lanmatrix_batch.py  test_lanmatrix_fields.py  test_lanmatrix_identity_columns.py  test_lanmatrix_io_excel.py  test_lanmatrix_io_extract.py  test_lanmatrix_materialize.py  test_lanmatrix_security.py  test_lanmatrix_validation.py  test_matrix_excel.py  test_upload_tree.py
tools/: check_names.py
(+144 files in other folders)
