[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0",
    "flask>=3.0,<4.0",
    "flask-sqlalchemy>=3.1,<4.0",
    "huey>=2.5,<3.0",
    "itsdangerous>=2.1",
    "openpyxl>=3.1,<4.0",
    "peewee>=3.17,<4.0",
    "psycopg2-binary>=2.9,<3.0",
    "pydantic>=2.0,<3.0",
    "pytest>=8.0,<9.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30",
    "waitress>=3.0,<4.0",
    "websockets>=12,<14",
]
